--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 "tabWidth": 2
 printWidth: 100
-importOrder: ["^node:", "<THIRD_PARTY_MODULES>", "^@power-select\/", "^[.]+\/"]
+importOrder: ["^node:", "<THIRD_PARTY_MODULES>", "^@selectoroid\/", "^[.]+\/"]
 importOrderSeparation: true
 importOrderSortSpecifiers: true
 plugins: ["@trivago/prettier-plugin-sort-imports"]
