--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@power-select/model",
+  "name": "@selectoroid/model",
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "MIT",
