--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@power-select/react-hooks",
+  "name": "@selectoroid/react-hooks",
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "MIT",
