--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "esbuild": "^0.20.1",
+    "eslint": "^9.2.0",
     "lerna": "^8.1.2",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
