--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -4,7 +4,16 @@
   "main": "src/index.ts",
   "license": "MIT",
   "peerDependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18",
     "react-bootstrap": "^2"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.2",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2"
   }
 }
