--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,5 +5,10 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^18"
-  }
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.2",
+    "react": "^18.3.1"
+  },
+  "dependencies": {}
 }
