--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "description": "Easy navigation through nested categories and sub-categories, offering users a clear and intuitive interface for complex selections.",
   "author": "Miguel Guedes <miguel@softgeist.com>",
   "license": "MIT",
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "repository": {
     "type": "git",
     "url": "git@gitlab.softgeist.com:oss/selectoroid.git"
+  },
+  "scripts": {
+    "check": "set -e; for i in code lint fmt; do yarn run check:$i; done; echo 'check: PASS'",
+    "check:code": "yarn run check:tsc && yarn run check:lint",
+    "check:tsc": "tsc --noEmit",
+    "check:tsc:watch": "yarn run check:tsc --watch",
+    "check:lint": "eslint --color --cache --max-warnings=0 './packages/**/*.{js,ts,tsx}'",
+    "check:fmt": "set -e; for i in src json md scss; do yarn run check:fmt:$i; done",
+    "check:fmt:src": "prettier './packages/**/*.{js,mjs,ts,tsx}' '!dist/**' --check",
+    "check:fmt:json": "prettier --parser json '**/package.json' '!dist/**' --check",
+    "check:fmt:md": "prettier --parser markdown '**/*.md' '!dist/**' --check",
+    "check:fmt:scss": "prettier --parser scss '**/*.scss' '!dist/**' --check",
+    "fix:fmt": "set -e; for i in src json md scss; do yarn run fix:fmt:$i; done",
+    "fix:fmt:src": "yarn run check:fmt:src --write",
+    "fix:fmt:json": "yarn run check:fmt:json --write",
+    "fix:fmt:md": "yarn run check:fmt:md --write",
+    "fix:fmt:scss": "yarn run check:fmt:scss --write"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
