Prepare for publishing

--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@selectoroid/react-bootstrap",
   "version": "0.0.1",
-  "main": "src/index.ts",
+  "main": "dist/react-bootstrap.cjs.js",
+  "module": "dist/react-bootstrap.esm.js",
+  "types": "dist/types/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "rollup -c"
+  },
+  "files": [
+    "LICENSE",
+    "dist"
+  ],
   "peerDependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18",
