--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@selectoroid/model",
   "version": "0.0.1",
-  "main": "src/index.ts",
+  "main": "dist/model.cjs.js",
+  "module": "dist/model.esm.js",
+  "types": "dist/types/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "rollup -c"
+  },
+  "files": [
+    "LICENSE",
+    "dist"
+  ],
   "peerDependencies": {
     "react": "^18"
   }
