--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "fix:fmt:scss": "yarn run check:fmt:scss --write"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "esbuild": "^0.20.1",
     "eslint": "^9.2.0",
     "lerna": "^8.1.2",
     "prettier": "^3.2.5",
+    "rollup": "^4.18.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.1.0"
   }
