--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lerna": "^8.1.2",
     "prettier": "^3.2.5",
     "rollup": "^4.18.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.1.0"
   }
