--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -21,8 +21,9 @@
     "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.2",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2"
+    "@types/react": "^18",
+    "react": "^18",
+    "react-bootstrap": "^2",
+    "react-bootstrap-icons": "^1"
   }
 }
