--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,23 @@
 {
+  /*
+   * Important documentation on Typescript compiler options to use with Babel:
+   * https://babeljs.io/docs/babel-plugin-transform-typescript#typescript-compiler-options
+   */
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "jsx": "preserve",
-    "module": "esnext",
+    /* Visit https://aka.ms/tsconfig to read more about this file */
     "target": "es6",
-    // Determines the strategy used to resolve modules. "node" mimics Node.js module resolution,
-    // suitable for most projects, especially those using npm packages. "classic" was the default in
-    // early TypeScript versions but is generally not recommended. Use "node" for projects targeting
-    // Node.js or using common bundlers like Webpack.
-    //
-    // https://github.com/microsoft/TypeScript/issues/25400#issuecomment-580720429
-    "moduleResolution": "node",
-    "noImplicitReturns": true,
-    "incremental": true,
-    "noEmit": true,
-    "strict": true,
-    // Note that this setting is effectively ignored because it requires `noEmit` to NOT be true,
-    // which it is currently.
+    "module": "esnext",
+    "declarationDir": "types",
+    "jsx": "react",
     "declaration": true,
-    "importHelpers": true,
-    "isolatedModules": true,
+    "sourceMap": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "sourceMap": true
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],
   "exclude": [
     "node_modules"
   ]
