--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,20 +5,35 @@
    */
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
+    "baseUrl": ".",
     "target": "es6",
     "module": "esnext",
-    "declarationDir": "types",
     "jsx": "react",
-    "declaration": true,
     "sourceMap": true,
     "strict": true,
+    "declaration": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "noImplicitAny": true,
+    // For web applications targeting modern web browsers, the lib array should include typings for
+    // the DOM and ECMAScript features in use. For React applications, DOM typings are essential for
+    // manipulating and accessing the DOM. Targeting modern web browsers facilitates the use of
+    // recent ECMAScript features.
+    //
+    // * "dom" and "dom.iterable" provide typings for web APIs and DOM operations, crucial for
+    //   web development and user interactions within a React app. "dom.iterable" enhances support
+    //   for iterable collections in the DOM, allowing for more natural iteration patterns.
+    //
+    // * "esnext" includes the latest ECMAScript features, ensuring access to the most recent
+    //   language developments. While "esnext" is recommended for leveraging cutting-edge features,
+    //   specific versions like "es2020" can be targeted for more conservative compatibility. Ensure
+    //   that your development and production environments support these features, either natively
+    //   or through polyfills and bundlers.
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ]
+  }
 }
