--- a/packages/react-bootstrap/tsconfig.json
+++ b/packages/react-bootstrap/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@taglicious/model": [
+        "../model"
+      ],
+      "@taglicious/react": [
+        "../react"
+      ]
+    }
+  }
 }
