lint: fix formatting

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@taglicious/model": [
-        "../model"
-      ]
+      "@taglicious/model": ["../model"]
     }
   }
 }
