build: migrate to esbuild

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "type": "git",
     "url": "git@github.com:midsbie/selectoroid.git"
   },
+  "bin": {
+    "prepare": "sh/prepare"
+  },
   "scripts": {
-    "postinstall": "sh/setup-dev",
     "setup": "npm install && cd storybook && npm install",
-    "clean": "rm -rf packages/*/dist && sh/setup-dev",
+    "setup:dev": "npm exec --ws -- prepare -m development",
+    "clean": "rm -rf packages/*/dist",
     "clean:full": "npm run clean && rm -rf node_modules storybook/node_modules packages/*/node_modules",
-    "build": "npm run build --ws",
+    "build": "npm run --ws build",
     "version": "npm version --ws --no-workspaces-update --include-workspace-root",
     "package": "npm pack --ws",
     "check": "set -e; for i in code lint fmt; do npm run check:$i; done; echo 'check: PASS'",
@@ -35,7 +38,9 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "commander": "^12.1.0",
     "dts-bundle-generator": "^9.5.1",
+    "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "rollup": "^4.18.0",
