--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
+    "build": "../../sh/build $(pwd)",
     "build:types": "dts-bundle-generator --export-referenced-types=false -o dist/index.d.ts src/index.ts"
   },
   "files": [
@@ -20,6 +20,5 @@
   "devDependencies": {
     "@types/react": "^18.3.2",
     "react": "^18.3.1"
-  },
-  "dependencies": {}
+  }
 }
