--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@taglicious/model": ["../model"]
+      "@selectoroid/model": ["../model"]
     }
   }
 }
