--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,6 @@
     //   specific versions like "es2020" can be targeted for more conservative compatibility. Ensure
     //   that your development and production environments support these features, either natively
     //   or through polyfills and bundlers.
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ]
+    "lib": ["dom", "dom.iterable", "esnext"]
   }
 }
