--- a/storybook/package.json
+++ b/storybook/package.json
@@ -7,6 +7,7 @@
     "start": "storybook dev -p 6006",
     "build": "storybook build"
   },
+  "author": "Miguel Guedes <miguel@softgeist.com>",
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.4",
     "@storybook/addon-interactions": "^8.1.4",
