--- a/package.json
+++ b/package.json
@@ -5,49 +5,31 @@
   "description": "Easy navigation through nested categories and sub-categories, offering users a clear and intuitive interface for complex selections.",
   "author": "Miguel Guedes <miguel@softgeist.com>",
   "license": "MIT",
+  "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/model",
+    "packages/react-core",
+    "packages/react-bootstrap"
   ],
   "repository": {
     "type": "git",
     "url": "git@github.com:midsbie/selectoroid.git"
   },
-  "bin": {
-    "prepare": "sh/prepare"
-  },
   "scripts": {
     "setup": "npm install && cd storybook && npm install",
-    "setup:dev": "npm exec --ws -- prepare -m development",
     "clean": "rm -rf packages/*/dist",
     "clean:full": "npm run clean && rm -rf node_modules storybook/node_modules packages/*/node_modules",
-    "build": "npm run --ws build",
-    "version": "npm version --ws --no-workspaces-update --include-workspace-root",
-    "package": "npm pack --ws",
-    "check": "set -e; for i in code lint fmt; do npm run check:$i; done; echo 'check: PASS'",
-    "check:code": "npm run check:tsc && npm run check:lint",
-    "check:tsc": "tsc --noEmit",
-    "check:tsc:watch": "npm run check:tsc --watch",
-    "check:lint": "eslint --color --cache --max-warnings=0 './packages/**/*.{js,ts,tsx}'",
-    "check:fmt": "prettier package.json storybook/** './packages/**' '!node_modules/**' '!dist/**' --check --ignore-unknown --no-error-on-unmatched-pattern",
-    "fix:fmt": "npm run check:fmt -- --write"
+    "build": "npm exec --ws -- devout build",
+    "lint": "tsc --noEmit && eslint . && prettier --check .",
+    "fmt": "prettier --write .",
+    "version": "npm version --ws --no-workspaces-update --include-workspace-root"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "commander": "^12.1.0",
-    "dts-bundle-generator": "^9.5.1",
-    "esbuild": "^0.21.5",
-    "eslint": "^8.57.0",
+    "devout": "^0.0.5",
+    "eslint": "^9.6.0",
     "prettier": "^3.2.5",
-    "rollup": "^4.18.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-scss": "^4.0.0",
-    "sass": "^1.77.6",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^7.1.0"
+    "typescript-eslint": "^8.0.0-alpha.37"
   }
 }
