--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@selectoroid/model",
   "version": "0.0.1",
-  "main": "src/index.ts",
   "license": "MIT",
-  "scripts": {
-    "build": "../../sh/build $(pwd)",
-    "build:types": "dts-bundle-generator --export-referenced-types=false -o dist/index.d.ts src/index.ts"
+  "main": "src/index.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "files": [
     "LICENSE",
