--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -3,10 +3,6 @@
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "MIT",
-  "scripts": {
-    "build": "../../sh/build $(pwd)",
-    "build:types": "dts-bundle-generator --export-referenced-types=false -o dist/index.d.ts src/index.ts"
-  },
   "files": [
     "LICENSE",
     "dist"
@@ -19,10 +15,10 @@
     "react-bootstrap-icons": "^1"
   },
   "dependencies": {
-    "classnames": "^2.5.1",
     "@selectoroid/model": "^0",
     "@selectoroid/react-core": "^0",
-    "@taglicious/react-bootstrap": "^1.1.0-alpha.0"
+    "@taglicious/react-bootstrap": "^1.1.0-alpha.0",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "^18",
