--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "clean": "rm -rf packages/*/dist",
-    "clean:full": "npm run clean && rm -rf node_modules storybook/node_modules packages/*/node_modules",
+    "clean:full": "npm run clean && rm -rf node_modules packages/*/node_modules",
     "build": "npm exec --ws -- devout build",
     "start:storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
