--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@selectoroid/react-bootstrap",
-  "version": "0.0.1",
-  "main": "src/index.ts",
-  "license": "MIT",
-  "files": [
-    "LICENSE",
-    "dist"
-  ],
   "author": "Miguel Guedes <miguel@softgeist.com>",
+  "version": "0.0.1",
+  "license": "MIT",
+  "type": "module",
+  "main": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
@@ -15,13 +13,13 @@
     }
   },
   "dependencies": {
-    "@selectoroid/model": "^0",
-    "@selectoroid/react-core": "^0",
-    "@taglicious/react-bootstrap": "^1.1.0-alpha.0",
+    "@selectoroid/model": "0.0.1",
+    "@selectoroid/react-core": "0.0.1",
+    "@taglicious/react-bootstrap": "^1.2.3-alpha.0",
     "classnames": "^2.5.1"
   },
   "peerDependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5",
     "react": "^18",
     "react-bootstrap": "^2",
     "react-bootstrap-icons": "^1"
@@ -31,5 +29,12 @@
     "react": "^18",
     "react-bootstrap": "^2",
     "react-bootstrap-icons": "^1"
+  },
+  "files": [
+    "LICENSE",
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
