--- a/packages/react-core/package.json
+++ b/packages/react-core/package.json
@@ -1,22 +1,19 @@
 {
   "name": "@selectoroid/react-core",
+  "author": "Miguel Guedes <miguel@softgeist.com>",
   "version": "0.0.1",
   "license": "MIT",
-  "main": "src/index.ts",
   "type": "module",
+  "main": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
       "types": "./dist/index.d.ts"
     }
   },
-  "files": [
-    "LICENSE",
-    "dist"
-  ],
-  "author": "Miguel Guedes <miguel@softgeist.com>",
   "dependencies": {
-    "@selectoroid/model": "^0"
+    "@selectoroid/model": "0.0.1"
   },
   "peerDependencies": {
     "react": "^18"
@@ -24,5 +21,12 @@
   "devDependencies": {
     "@types/react": "^18.3.2",
     "react": "^18.3.1"
+  },
+  "files": [
+    "LICENSE",
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
