--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@selectoroid/react-bootstrap",
   "author": "Miguel Guedes <miguel@softgeist.com>",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.esm.js",
@@ -13,8 +13,8 @@
     }
   },
   "dependencies": {
-    "@selectoroid/model": "0.0.1",
-    "@selectoroid/react-core": "0.0.1",
+    "@selectoroid/model": "1.0.0-alpha.0",
+    "@selectoroid/react-core": "1.0.0-alpha.0",
     "@taglicious/react-bootstrap": "^1.2.3-alpha.0",
     "classnames": "^2.5.1"
   },
