--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@selectoroid/model",
   "author": "Miguel Guedes <miguel@softgeist.com>",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.esm.js",
