--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@selectoroid/model",
   "author": "Miguel Guedes <miguel@softgeist.com>",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0",
   "license": "MIT",
   "type": "module",
   "main": "./src/index.ts",
