--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@selectoroid/model": "1.0.0",
     "@selectoroid/react-core": "1.0.0",
-    "@taglicious/react-bootstrap": "^1.2.3-alpha.2",
+    "@taglicious/react-bootstrap": "^1.3.1",
     "classnames": "^2.5.1"
   },
   "peerDependencies": {
