npm: fix local dependency declarations

--- a/packages/react-core/package.json
+++ b/packages/react-core/package.json
@@ -10,7 +10,7 @@
     "prepack": "devout prepare"
   },
   "dependencies": {
-    "@selectoroid/model": "1.0.0"
+    "@selectoroid/model": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^19"
