--- a/packages/react-bootstrap/package.json
+++ b/packages/react-bootstrap/package.json
@@ -10,8 +10,8 @@
     "prepack": "devout prepare"
   },
   "dependencies": {
-    "@selectoroid/model": "1.0.0",
-    "@selectoroid/react-core": "1.0.0",
+    "@selectoroid/model": "^1.0.0",
+    "@selectoroid/react-core": "^1.0.0",
     "@taglicious/react-bootstrap": "^1.3.1",
     "classnames": "^2.5.1"
   },
