--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "storybook": "^8.5.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^7.18.0"
+  },
+  "dependencies": {
+    "@types/node": "^22.10.7"
   }
 }
