--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     //   node_modules/@types/mdx/types.d.ts:23:38 - error TS2503: Cannot find namespace 'JSX'.
     //
     //   23 type StringComponent = Extract<keyof JSX.IntrinsicElements, ElementType extends never ? string : ElementType>;
-    "types": ["@types/react"],
+    "types": ["@types/react", "@types/node"],
     "paths": {
       "@selectoroid/model": ["packages/model/src/index.ts"],
       "@selectoroid/react-core": ["packages/react-core/src/index.ts"],
